--- a/pom.xml
+++ b/pom.xml
@@ -17,109 +17,55 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
-            <configuration>
-                <properties>
-                    <property>
-                        <name>listener</name>
-                        <value>io.qameta.allure.junit5.AllureJunit5</value>
-                    </property>
-                </properties>
-                <includes>
-                    <include>**/tests/**.java</include>
-                </includes>
-                <argLine>
-                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                </argLine>
-                <systemProperties>
-                    <property>
-                        <name>allure.results.directory</name>
-                        <value>${project.basedir}/target/allure-results</value>
-                    </property>
-                    <property>
-                        <name>junit.jupiter.extensions.autodetection.enabled</name>
-                        <value>true</value>
-                    </property>
-                </systemProperties>
-                <reportFormat>plain</reportFormat>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven-compiler-plugin.version}</version>
-            <configuration>
-                <source>${java.version}</source>
-                <target>${java.version}</target>
-            </configuration>
-        </plugin>
             <plugin>
-                <groupId>io.qameta.allure</groupId>
-                <artifactId>allure-maven</artifactId>
-                <version>2.11.2</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
                 <configuration>
-                    <reportVersion>2.4.1</reportVersion>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
 
-
     <properties>
-        <junit.bom.version>5.7.0</junit.bom.version>
-        <junit.jupiter.params>5.7.0</junit.jupiter.params>
-        <junit.jupiter.api>5.7.0</junit.jupiter.api>
-        <junit.jupiter.vintage.engine>5.7.0</junit.jupiter.vintage.engine>
         <selenium.version>4.1.4</selenium.version>
         <log4j.core.version>2.17.2</log4j.core.version>
         <log4j.api.version>2.17.2</log4j.api.version>
         <org.slf4j>1.7.36</org.slf4j>
         <json.simple>1.1.1</json.simple>
-        <allure-junit5.version>2.18.1</allure-junit5.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <aspectj.version>1.9.9.1</aspectj.version>
-        <junit-platform-surefire-provider.version>1.3.1</junit-platform-surefire-provider.version>
-        <junit.jupiter.version>5.8.0-M1</junit.jupiter.version>
-        <allure.maven.version>2.11.2</allure.maven.version>
+        <testng.version>7.4.0</testng.version>
+        <allure>2.18.1</allure>
+        <aspectj.version>1.8.10</aspectj.version>
+        <commonsIo>2.11.0</commonsIo>
+        <gson>2.7</gson>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.junit</groupId>
-            <artifactId>junit-bom</artifactId>
-            <version>${junit.bom.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit.jupiter.params}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.jupiter.api}</version>
-            <scope>test</scope>
+            <version>${gson}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.jupiter.vintage.engine}</version>
+            <version>${commonsIo}</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -148,30 +94,9 @@
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-maven</artifactId>
-            <version>${allure.maven.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-junit5</artifactId>
-            <version>2.18.1</version>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure}</version>
             <scope>test</scope>
         </dependency>
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjweaver</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${junit.jupiter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
-                <version>${junit.jupiter.version}</version>
-            </dependency>
-
     </dependencies>
 </project>
