Adding WebDriver Inteface Adding logger to classes adding methods for login and populating required fields Removing Constants and adding info to properties

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,6 @@
-environment=local
+environment=remote
 browser=chrome
+password=TestPassword
+email=emailtesttik@mailik.ru
+loginUrl=http://automationpractice.com/index.php?controller=authentication&back=my-account
+wishlistUrl=http://automationpractice.com/index.php?fc=module&module=blockwishlist&controller=mywishlist
