--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
         <allure>2.18.1</allure>
         <aspectj.version>1.8.10</aspectj.version>
         <commonsIo>2.11.0</commonsIo>
-        <gson>2.7</gson>
+        <jackson>2.13.0</jackson>
+        <allure.commons>2.18.1</allure.commons>
     </properties>
 
     <dependencies>
@@ -88,15 +89,21 @@
             <version>${org.slf4j}</version>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>${json.simple}</version>
-        </dependency>
-        <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>${allure}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>${allure.commons}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
