Adding allure Feature

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-environment=remote
-browser=chrome
+environment=local
+browser=firefox
 password=TestPassword
 email=emailtesttik@mailik.ru
 loginUrl=http://automationpractice.com/index.php?controller=authentication&back=my-account
